--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
+    "@mantine/core": "^6.0.7",
+    "@mantine/hooks": "^6.0.7",
+    "@mantine/next": "^6.0.7",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "date-fns": "^2.29.3",
     "framer-motion": "^10.11.2",
     "next": "^13.2.4",
     "react": "18.2.0",
+    "react-date-picker": "^10.0.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-lorem-ipsum": "^1.4.10",
     "react-slick": "^0.29.0",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
